enable visibility of move arrow in file manager, fix #1565 (#1585)
* enable visiblility of move arrow in filemanager, fix #1565
* css structure corrections

--- a/modules/admin/src/resources/scss/components/_folders.scss
+++ b/modules/admin/src/resources/scss/components/_folders.scss
@@ -18,7 +18,6 @@ $icon-line-height: $icon-font-size + 5px;
     flex-wrap: wrap;
     margin-right: 4px;
     overflow: hidden;
-
     position: relative;
 
     &:not(:first-of-type) {
@@ -40,6 +39,14 @@ $icon-line-height: $icon-font-size + 5px;
 
     .folders-items {
         padding-left: 3px;
+    }
+    .is-movable {
+        .folders-label {
+            background-color: map-get($grays, 300);
+        }
+        .folders-actions-right {
+            display: block;
+        }
     }
 }
 
@@ -66,7 +73,6 @@ $icon-line-height: $icon-font-size + 5px;
     &:hover {
         color: theme-color(primary);
     }
-
     order: -2;
 }
 
@@ -94,6 +100,10 @@ $icon-line-height: $icon-font-size + 5px;
     .folders-item-main > & > span {
         display: inline-block;
         vertical-align: middle;
+    }
+
+    .is-moveable & {
+        display: block;
     }
 }
 
@@ -133,11 +143,9 @@ $icon-line-height: $icon-font-size + 5px;
     &-delete:hover {
         color: theme-color(danger);
     }
-
     /*&-edit:hover {
         color: theme-color(success);
     }*/
-
     &:hover {
 
         .folders-label {
@@ -166,10 +174,8 @@ $icon-line-height: $icon-font-size + 5px;
     padding-left: 2px;
     padding-right: 2px;
     right: 0;
-
     transition: opacity .2s ease-in-out;
 
-    &.is-visible,
     &:hover {
         display: block;
     }
